Fix: Updated the z-index value

--- a/client/views/helpers/qr_code/qr_code.scss
+++ b/client/views/helpers/qr_code/qr_code.scss
@@ -15,7 +15,7 @@
   height: auto;
   margin-top: 120px;
   margin-bottom: 120px;
-  z-index: 9999999999999999;
+  z-index: 2147483647;
   position: fixed;
   top: 0;
   left: 32%;
